[project]
name = "research_and_blog_crew"
version = "0.1.0"
description = "research_and_blog_crew using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0",
    "ants-platform[crewai] @ git+https://github.com/ants-platform/ants-platform-python.git",
]

[project.scripts]
research_and_blog_crew = "research_and_blog_crew.main:run"
run_crew = "research_and_blog_crew.main:run"
train = "research_and_blog_crew.main:train"
replay = "research_and_blog_crew.main:replay"
test = "research_and_blog_crew.main:test"
run_with_trigger = "research_and_blog_crew.main:run_with_trigger"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ants-platform = { git = "https://github.com/ants-platform/ants-platform-python.git" }

[tool.crewai]
type = "crew"
